--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -11,16 +11,16 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="card">
       <div class="card-header text-center"><h1>Database admin page</h1></div>
       <div class="card-body">
-        <p>This page allows you to manually administer your users, pods and indexed URLs. If you ever need to e.g. delete a single URL from your indexed pages, or modify a keyword, this is the place to do so. You can also view and search the entire list of available pods, as registered by your pear.</p>
+	      <p>{{gettext('This page allows you to manually administer your users, pods and indexed URLs. If you ever need to e.g. delete a single URL from your indexed pages, or modify a keyword, this is the place to do so. You can also view and search the entire list of available pods, as registered by your pear.')}}</p>
         <div class="row">
           <div class="col-sm-3 p-3">
-            <a href="{{url_for('urls.index_view')}}" class="btn btn-success">See/modify your URL list</a>
+		  <a href="{{url_for('urls.index_view')}}" class="btn btn-success">{{gettext('See/modify your URL list')}}</a>
           </div>
           <div class="col-sm-3 p-3">
-            <a href="{{url_for('pods.index_view')}}" class="btn btn-success">See/modify your Pods list</a>
+		  <a href="{{url_for('pods.index_view')}}" class="btn btn-success">{{gettext('See/modify your Pods list')}}</a>
           </div>
           <div class="col-sm-3 p-3">
-            <a href="{{url_for('user.index_view')}}" class="btn btn-success">See/modify your Users list</a>
+		  <a href="{{url_for('user.index_view')}}" class="btn btn-success">{{gettext('See/modify your Users list')}}</a>
           </div>
         </div>
       </div>
