--- a/app/templates/indexer/index.html
+++ b/app/templates/indexer/index.html
@@ -51,7 +51,7 @@ SPDX-License-Identifier: AGPL-3.0-only
     </form>
     </div>
    </div>
-   <button class="btn btn-link" onclick="toggle()">Or add a manual resource</button>
+   <button class="btn btn-link" onclick="toggle()">{{gettext('Or add a manual resource')}}</button>
   </div>
 
   {% if default_screen == 'manual' %}
@@ -84,7 +84,7 @@ SPDX-License-Identifier: AGPL-3.0-only
       </div><!-- card footer -->
     </form>
     </div>
- <button class="btn btn-link" onclick="toggle()">Or index a URL</button>
+    <button class="btn btn-link" onclick="toggle()">{{gettext('Or index a URL')}}</button>
  </div>
 </div><!-- /.container -->
 
