--- a/app/templates/auth/password_forgotten.html
+++ b/app/templates/auth/password_forgotten.html
@@ -9,7 +9,7 @@
   <div class="row">
   <div class="col-sm-6">
     <div class="card">
-	    <div class="card-header text-center"><b>{{gettext("Forgotten your password? No problem!")}}</b></div>
+	    <div class="card-header text-center"><b>{{gettext('Forgotten your password? No problem!')}}</b></div>
       <div class="card-body">
 	{% with messages = get_flashed_messages() %}
         {% if messages %}
