--- a/app/templates/indexer/fail.html
+++ b/app/templates/indexer/fail.html
@@ -10,8 +10,8 @@ SPDX-License-Identifier: AGPL-3.0-only
   <br><br>
   <div class="row">
     <div class="col-md-10 p-3" style="padding-left: 20px; display:flex;  flex-direction: row;  flex-wrap: wrap;  margin-bottom: 45px;">
-      <p>Unfortunately, an error occurred while we were trying to index the suggested URL. This could have various reasons. For instance, the website owner disallows automatic access
-      to their content, or the server refused our request. Please also check that the URL still exists, and that you have not mistyped it.</p>
+      <p>{{gettext('Unfortunately, an error occurred while we were trying to index the suggested URL. This could have various reasons. For instance, the website owner disallows automatic access
+      to their content, or the server refused our request. Please also check that the URL still exists, and that you have not mistyped it.')}}</p>
       <hr>
       {% for message in messages %}
       <b>{{message|safe}}</b><br>
