--- a/app/templates/indexer/success.html
+++ b/app/templates/indexer/success.html
@@ -14,15 +14,15 @@ SPDX-License-Identifier: AGPL-3.0-only
       <b>{{message}}</b><br>
       {% endfor %}
     </div>
-      <p>Your URL has been successfully indexed! Here is a summary of your contribution:</p>
+    <p>{{gettext('Your URL has been successfully indexed! Here is a summary of your contribution:')}}</p>
       {% if url %}
       <p><ion-icon name="globe-outline"></ion-icon><b> WWW Link: </b> <a href={{url}}>{{url}}</a><br></p>
       {% endif %}
       <p><ion-icon name="search-circle-outline"></ion-icon><b> PeARS Link: </b> <a href={{share_url}}>{{share_url}}</a><br></p>
-      <p><ion-icon name="file-tray-stacked-outline"></ion-icon><b> Category: </b> {{theme}}<br></p>
-      <p><ion-icon name="chatbubble-ellipses-outline"></ion-icon><b> Note: </b> {{note}}<br></p>
+      <p><ion-icon name="file-tray-stacked-outline"></ion-icon><b> {{gettext('Category:')}} </b> {{theme}}<br></p>
+      <p><ion-icon name="chatbubble-ellipses-outline"></ion-icon><b> {{gettext('Note:')}} </b> {{note}}<br></p>
       <br>
-      <p>Made a mistake? No problem, <a href="{{url_for('indexer.correct_entry')}}" onclick="return confirm('Are you sure you want to amend your contribution? Clicking on this link will delete the resource you have just indexed and send you back to the indexing form, prefilled with your previous entries.')">try again</a></p>
+      <p>{{gettext('Made a mistake? No problem')}}, <a href="{{url_for('indexer.correct_entry')}}" onclick="return confirm({{gettext('Are you sure you want to amend your contribution? Clicking on this link will delete the resource you have just indexed and send you back to the indexing form, prefilled with your previous entries.')}})">{{gettext('try again')}}</a></p>
       <a class="btn btn-primary" href="{{url_for('indexer.index')}}">{{gettext("Index more pages")}}</a>
   </div>
 </div>
