--- a/app/templates/orchard/get-a-pod.html
+++ b/app/templates/orchard/get-a-pod.html
@@ -9,9 +9,9 @@ SPDX-License-Identifier: AGPL-3.0-only
 <div class="container">
   <div class="row">
     <div class="card">
-	    <div class="card-header"><b>Theme: {{query}}</b></div>
+	    <div class="card-header"><b>{{gettext('Theme')}}: {{query}}</b></div>
          <div class="card-body">
-         <a href={{url_for('orchard.download_file', filename=location)}} target='_blank' class="btn btn-success" role="button">Download</a><hr>
+		 <a href={{url_for('orchard.download_file', filename=location)}} target='_blank' class="btn btn-success" role="button">{{gettext('Download')}}</a><hr>
 	 {% for url in urls %}
 	 <a href='{{url}}'>{{url}}</a>
 	 <br>
