Fixed translation issues

--- a/app/templates/indexer/success.html
+++ b/app/templates/indexer/success.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: AGPL-3.0-only
       <p><ion-icon name="file-tray-stacked-outline"></ion-icon><b> {{gettext('Category:')}} </b> {{theme}}<br></p>
       <p><ion-icon name="chatbubble-ellipses-outline"></ion-icon><b> {{gettext('Note:')}} </b> {{note}}<br></p>
       <br>
-      <p>{{gettext('Made a mistake? No problem')}}, <a href="{{url_for('indexer.correct_entry')}}" onclick="return confirm({{gettext('Are you sure you want to amend your contribution? Clicking on this link will delete the resource you have just indexed and send you back to the indexing form, prefilled with your previous entries.')}})">{{gettext('try again')}}</a></p>
+      <p>{{gettext('Made a mistake? No problem')}}, <a href="{{url_for('indexer.correct_entry')}}" onclick="return confirm('Are you sure you want to amend your contribution? Clicking on this link will delete the resource you have just indexed and send you back to the indexing form, prefilled with your previous entries.')">{{gettext('try again')}}</a></p>
       <a class="btn btn-primary" href="{{url_for('indexer.index')}}">{{gettext("Index more pages")}}</a>
   </div>
 </div>
