--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -23,6 +23,7 @@
         <p>{{ render_field(form.username) }}</p>
         <p>{{ render_field(form.password) }}</p>
         <p>{{ render_field(form.confirm) }}</p>
+	<p>{{ render_field(form.captcha_answer) }}</p>
 	<div class="form-check">
 	  {{ form.accept_tos(class_="form-check-input") }}
 	  <label class="form-check-label" for="legal">{{gettext("I agree to the <a href='../../privacy/'>privacy policy</a> and <a href='../../terms-of-service/'>terms of service</a> of this site.")|safe}}</label>
