--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -34,6 +34,7 @@ SPDX-License-Identifier: AGPL-3.0-only
           </button>
         </div>
       </form>
+      <p class="small">Help us improve this alpha version of PeARS! <a href={{url_for('orchard.feedback')}}>Send us your feedback.</a></p>
       </div>
     </div>
     <div class="row">
@@ -49,7 +50,8 @@ SPDX-License-Identifier: AGPL-3.0-only
         <div class="card mt-2">
           <div class="card-body" style="padding: 20px 0px 20px 0px">
 	    <div class="d-flex justify-content-between">
-		    <div><ion-icon name="globe"></ion-icon> <a href="{{result[1]}}" style="text-decoration: none; font-size: large"><b>{{result[2]}}</b></a></div>
+		    <div><ion-icon name="globe"></ion-icon> <a href="{{result[1]}}" style="text-decoration: none; font-size: large"><b>{{result[2]}}</b></a>
+            </div>
 
 	    <div>
 	      <a class="btn btn-link" href="{{url_for('orchard.annotate')}}?url={{result[1]}}" data-toggle="tooltip" title="{{gettext('Add a note to this entry')}}"><ion-icon name="chatbubble-outline"></ion-icon></a>  
@@ -75,9 +77,9 @@ SPDX-License-Identifier: AGPL-3.0-only
         {% endif %}
         </div>
       </div>
-    </div>
-  </div>
-</div>
+    </div><!-- col -->
+  </div><!-- row -->
+</div><!-- container -->
 <!-- /#page-content-wrapper -->
 <script src="{{ url_for('static', filename='js/bootstrap.min.js')}}"></script>
 <script src="{{ url_for('static', filename='js/loading.js')}}"></script>
