--- a/app/templates/pages/privacy.html
+++ b/app/templates/pages/privacy.html
@@ -5,26 +5,41 @@
   <div class="row">
        <div class="col-md-6">
        <h3>Our privacy policy</h3>
-       <p>This privacy policy describes how <i>{{sitename}}</i> ("{{sitename}}", "we", "us") collects, protects and uses the personally identifiable information you may provide through the <i>{{sitename}}</i> website or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>{{sitename}}</i> does not own or control, or to individuals that <i>{{sitename}}</i> does not employ or manage.</p>
+       
+       <p>PeARS is <a href="https://pearsproject.org/">open-source software</a> developed by volunteers and freely available for all to use and modify. It receives development support from the non-profit collective <a href="https://possible-worlds.eu/">Possible Worlds Research</a>.</p>
+
+       <p>This specific instance is run by <i>{{orgname}}</i> ("we"/"us"). You can contact us at:</p>
+
+       <p>{{address}}<br>{{email}}.</p>
+
+       <p>This privacy policy describes how <i>{{orgname}}</i> collects, protects and uses the personally identifiable information you may provide through the <i>{{sitename}}</i> website itself or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>{{orgname}}</i> does not own or control, or to individuals that <i>{{orgname}}</i> does not employ or manage.</p>
+       
+
 
        <h4>What information do we collect?</h4>
        <p>Basic account information: If you register on this server, you may be asked to enter a username, an e-mail address and a password. You may also be able to enter additional profile information such as a display name and biography, and upload a profile picture and header image. The username, display name, biography, profile picture and header image are always listed publicly.</p>
 
-       <p>Contributions and other public information: When you submit a URL or a comment to the <i>{{sitename}}</i> index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly.</p> 
+       <p>Contributions and other public information: When you submit a URL, a post or a comment to the <i>{{sitename}}</i> index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly.</p> 
 
-       <p>IPs and other metadata: When you log in, we record the IP address you log in from, as well as the name of your browser application. All the logged in sessions are available for your review and revocation in the settings. The latest IP address used is stored for up to 12 months. We also may retain server logs which include the IP address of every request to our server.</p>
+       <p>IPs and other metadata: When you log in, we record the IP address you log in from, as well as the name of your browser application. The latest IP address used is stored for up to 12 months. We also may retain server logs which include the IP address of every request to our server.</p>
+
+
 
        <h4>What do we use your information for?</h4>
        <p>Any of the information we collect from you may be used in the following ways:</p>
 
-	<p>To provide the core functionality of PeARS. You can only submit new URLS or administer your notes when you are logged in.</p>
+	<p>To provide the core functionality of PeARS. You can only submit new URLS or administer your posts and comments when you are logged in.</p>
 
 	<p>To aid moderation of the community, for example comparing your IP address with other known ones to determine ban evasion or other violations.</p>
 
-	<p>The email address you provide may be used to send you information, and to respond to inquiries, and/or other requests or questions.</p>
+	<p>The email address you provide may be used to send you information about your account, and to respond to inquiries, and/or other requests or questions.</p>
+
+
 
 	<h4>How do we protect your information?</h4>
 	<p>We implement a variety of security measures to maintain the safety of your personal information when you enter, submit, or access your personal information. Among other things, your browser session, as well as the traffic between your applications and the API, are secured with SSL, and your password is hashed using a strong one-way algorithm.</p>
+
+
 
 	<h4>What is our data retention policy?</h4>
 	<p>We will make a good faith effort to:</p>
@@ -35,19 +50,22 @@
 
 	<p>You can request and download an archive of your content, including your contributions.</p>
 
-	<p>You may irreversibly delete your account at any time.</p>
+	<p>You may irreversibly delete your account at any time. Upon deletion, your username, email and password are removed from our server. Your content (submitted URLs, posts and comments) is moved to an anonymous account managed by the site's administrator (e.g. <i>deleteduser1234</i>). If you wish for your content to be entirely deleted, you can do so from your profile prior to account deletion. You can also contact us to request removal of your data.</p>
+
 
 
 	<h4>Do we use cookies?</h4>
 
 	<p>Yes. Cookies are small files that a site or its service provider transfers to your computer's hard drive through your Web browser (if you allow). These cookies enable the site to recognize your browser and, if you have a registered account, associate it with your registered account.</p>
 
-	<p>We use cookies to understand and save your preferences for future visits.</p>
+	<p>We only use session cookies. We use them to provide you with a way to log in and out of our site, manage your session as you navigate through the site, and recognize you upon future visits.</p>
+	
 
 	<h4>Do we disclose any information to outside parties?</h4>
 	<p>We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our site, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety.</p>
 
 	<p>Your public contributions may be downloaded by other servers in the PeARS network, to improve search efficiency.</p>
+
 
 
 	<h4>Site usage by children</h4>
