--- a/app/templates/pages/faq-fr.html
+++ b/app/templates/pages/faq-fr.html
@@ -58,7 +58,7 @@ SPDX-License-Identifier: AGPL-3.0-only
        <br><br>
        <p id="indexurl"><b>What is your approach to crawling?</b></p>
        <p>Crawling is a big topic at the moment, alors que les multinationales de la Tech sont souvent accusées de moissonner sans discernement le contenu du web pour entraîner des modèles d’IA, et par extension, la recherche basé sur l’IA.</p>
-       <p>PeARS respecte toujours les détenteurs de droits d’auteur. Il vérifie automatiquement les contraintes spécifiées par les fichiers robots.txt et il n’affiche que des snippets minimaux dans les résultats de recherche. Si vous souhaitez que votre site soit retiré l’index, contacter simplement l’administrateur pour cette instance, et nous supprimerons votre contenu.</p>
+       <p>PeARS respecte toujours les détenteurs de droits d’auteur. Il vérifie automatiquement les contraintes spécifiées par les fichiers robots.txt et il n’affiche que des snippets minimaux dans les résultats de recherche. Si vous souhaitez que votre site soit retiré de l’index, contactez simplement l’administrateur pour cette instance, et nous supprimerons votre contenu.</p>
        
        <br><br>
        </div>
