--- a/app/templates/search/results.html
+++ b/app/templates/search/results.html
@@ -5,6 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 -->
 
 {% extends "base/base.html" %}
+{% from "base/_formhelpers.html" import render_search_field %}
 {% block body %}
 <!-- Page Content -->
 <div id="page-content-wrapper">
@@ -25,9 +26,10 @@ SPDX-License-Identifier: AGPL-3.0-only
           </div>
         </div>
         {% endif %}
-      <form  action="{{url_for('search.index')}}" id='searchform'>
+      <form method="POST" action="{{url_for('search.index')}}" enctype="multipart/form-data" id='searchform'>
+        {{ searchform.hidden_tag() }}
         <div class="input-group group mt-4" >
-	  <input class="form-control" title="Enter your search query." placeholder="{{gettext('Enter your search query')}}"  type="search" name='q' required>
+          {{ render_search_field(searchform.query, placeholder) }}
 	  <button class="btn btn-lg btn-success" type="submit" id='searchbutton'><ion-icon name="search-outline"></ion-icon></button>
           <button class="btn btn-lg btn-success" type="button" id='loadingbutton' style='display:none'>
             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
