Added form helper for search field

--- a/app/templates/base/_formhelpers.html
+++ b/app/templates/base/_formhelpers.html
@@ -1,3 +1,16 @@
+{% macro render_search_field(field, placeholder) %}
+{{ field(class_="form-control input-s", size=32, placeholder=placeholder) }}
+<dd>{% if field.errors %}
+    <ul class=errors>
+    {% for error in field.errors %}
+    <li><b>{{ error }}</b></li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+</dd>
+{% endmacro %}
+
+
 {% macro render_field(field) %}
 <div class="form-group">
         {{ field.label }}
