--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -17,7 +17,8 @@
             </div>
         {% endif %}
         {% endwith %}
-      <form method="POST" action="/auth/signup" enctype="multipart/form-data">
+        {% if new_users_allowed %}
+        <form method="POST" action="/auth/signup" enctype="multipart/form-data">
         {{ form.hidden_tag() }}
         <p>{{ render_field(form.email) }}</p>
         <p>{{ render_field(form.username) }}</p>
@@ -33,7 +34,8 @@
         <span class="input-group-btn">
 		<input id="submit_button" type="submit" class="btn btn-success" value="{{gettext('Sign up')}}">
       </div><!-- card footer -->
-    </form>
+      </form>
+      {% endif %}
     </div>
     <br><p>{{gettext('Do you already have an account?')}}  <a href={{url_for('auth.login')}}>{{gettext('Log in')}}</a></p>
  </div>
