--- a/app/templates/pages/privacy.html
+++ b/app/templates/pages/privacy.html
@@ -5,75 +5,73 @@
   <div class="row">
        <div class="col-md-6">
        <h3>Our privacy policy</h3>
-       
+
        <p>PeARS is <a href="https://pearsproject.org/">open-source software</a> developed by volunteers and freely available for all to use and modify. It receives development support from the non-profit collective <a href="https://possible-worlds.eu/">Possible Worlds Research</a>.</p>
 
        <p>This specific instance is run by <i>{{orgname}}</i> ("we"/"us"). You can contact us at:</p>
 
        <p>{{address}}<br>{{email}}.</p>
 
-       <p>This privacy policy describes how <i>{{orgname}}</i> collects, protects and uses the personally identifiable information you may provide through the <i>{{sitename}}</i> website itself or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>{{orgname}}</i> does not own or control, or to individuals that <i>{{orgname}}</i> does not employ or manage.</p>
+       <p>This privacy policy describes how <i>{{orgname}}</i> collects, protects and uses the personally identifiable information you may provide through the countercult.info website itself or its API. The policy also describes the choices available to you regarding our use of your personal information and how you can access and update this information. This policy does not apply to the practices of companies that <i>{{orgname}}</i> does not own or control, or to individuals that <i>{{orgname}}</i> does not employ or manage.</p>
+
+       <h4>What information do we collect and what do we use it for?</h4>
+       <p>Basic account information: If you register on this server, you may be asked to enter a username, an e-mail address and a password. You may also be able to enter additional profile information such as a display name and biography, and upload a profile picture and header image. The username, display name, biography, profile picture and header image are always listed publicly. We use the information to create your account and provide you with the core functionality of PeARS. You can only submit new URLS or administer your posts and comments when you are logged in. The email address you provide may be used to send you information about your account, and to respond to inquiries, and/or other requests or questions. The legal basis for the processing is Art. 6 par. 1 lit. b) GDPR.</p>
+
+       <p>Contributions and other public information: When you submit a URL, a post or a comment to the countercult.info index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly. The legal basis for the processing is Art. 6 par. 1 lit. b) GDPR.</p>
+
+       <p>IPs and other metadata: When you use our website or the API we use your IP address and the metadate transferred with it to establish a connection with our servers. When you log in, we record the IP address you log in from, as well as the name of your browser application. The latest IP address used is stored for up to 12 months. We also may retain server logs which include the IP address of every request to our server. We use the data to ensure functionality and security of our systems and also to aid moderation of the community, for example comparing your IP address with other known ones to determine ban evasion or other violations.  These purposes constitute our legitimate interest. The legal basis is Art. 6 par. 1 lit. f) GDPR. </p>
+
+       <h4>How do we protect your information?</h4>
+       <p>We implement a variety of security measures to maintain the safety of your personal information when you enter, submit, or access your personal information. Among other things, your browser session, as well as the traffic between your applications and the API, are secured with SSL, and your password is hashed using a strong one-way algorithm.</p>
+
+       <h4>What is our data retention policy?</h4>
+       <p>We will make a good faith effort to:</p>
+       <p>Retain server logs containing the IP address of all requests to this server, in so far as such logs are kept, no more than 90 days.</p>
+       <p>Retain the IP addresses associated with registered users no more than 12 months.</p>
+       <p>You can request and download an archive of your content, including your contributions.</p>
+       <p>You may irreversibly delete your account at any time. Upon deletion, your username, email and password are removed from our server. Your content (submitted URLs, posts and comments) is moved to an anonymous account managed by the site's administrator (e.g. deleteduser1234). If you wish for your content to be entirely deleted, you can do so from your profile prior to account deletion. You can also contact us to request removal of your data.</p>
+
+       <h4>Do we use cookies?</h4>
+       <p>Yes. Cookies are small files that a site or its service provider transfers to your computer's hard drive through your Web browser (if you allow it). These cookies enable the site to recognize your browser and, if you have a registered account, associate it with your registered account.</p>
+
+       <p>We only use session cookies. We use them to provide you with a way to log in and out of our site, manage your session as you navigate through the site, and recognize you upon future visits.</p>
+
+       <h4>Do we disclose any information to outside parties?</h4>
+       <p>Our instance is hosted at {{servers}}.</p>
+
+       <p>Your public contributions may be downloaded by other servers in the PeARS network, to improve search efficiency.</p>
+
+       <h4>Site usage by children</h4>
+       <p>If this server is in the EU or the EEA: Our site, products and services are all directed to people who are at least 16 years old. If you are under the age of 16, per the requirements of the GDPR (General Data Protection Regulation) do not use this site.</p>
+       <p>If this server is in the USA: Our site, products and services are all directed to people who are at least 13 years old. If you are under the age of 13, per the requirements of COPPA (Children's Online Privacy Protection Act) do not use this site.</p>
+       <p>Law requirements can be different if this server is in another jurisdiction.</p>
+
+       <h4>Your rights as a data subject</h4>
+       <p>The GDPR guarantees you certain rights, which you can assert against us - if the legal requirements are met. </p>
+       <p>Art. 15 GDPR - Right of access: You have the right to obtain confirmation from us as to whether personal data relating to you are being processed and, if so, what these data are and the detailed circumstances of the processing. </p>
+       <p>Art. 16 GDPR - Right of rectification: You have the right to ask us to rectify incorrect personal data concerning you immediately. You also have the right to request the completion of incomplete personal data, including by means of a supplementary declaration, taking into account the purposes of the processing.</p>
+       <p>Art. 17 GDPR - Right to deletion: You have the right to demand that we delete any personal data relating to you immediately.</p>
+       <p>Art. 18 GDPR - Right to restriction of processing: You have the right to request us to restrict processing.</p>
+       <p>Art. 20 GDPR - Right to data portability: You have the right, in the event of processing based on consent or for the fulfilment of a contract, to receive the personal data concerning you which you have provided us with in a structured, common and machine-readable format and to transfer this data to another responsible party without hindrance from us or to have the data transferred directly to the other responsible party, insofar as this is technically feasible.</p>
+       <p>Art. 77 GDPR in conjunction with Section 19 BDSG - Right to lodge a complaint with a supervisory authority: You have the right to lodge a complaint with a supervisory authority at any time, in particular in the Member State in which you are resident, your place of work or place of the alleged infringement if you consider that the processing of personal data relating to you infringes data protection law.</p>
        
+       <h4>In particular right to object and right to withdraw consent</h4>
+       <p>Art. 21 GDPR - Right to object: You have the right to object at any time, for reasons arising from your particular situation, to the processing of personal data concerning you which is necessary on the basis of a legitimate interest on our part or in order to carry out a task in the public interest, or which is carried out in the exercise of official authority. </p>
+       <p>If you object, we will no longer process your personal data unless we can prove compelling legitimate grounds for processing that override your interests, rights and freedoms, or unless the processing serves to assert, exercise or defend legal claims. </p>
+       <p>If we process your personal data for direct marketing purposes, you have the right to object to the processing at any time. If you object to processing for direct marketing purposes, we will no longer process your personal data for these purposes.</p>
+       <p>In order to exercise your right of objection, you can, for example, send us an email to the email address mentioned above. </p>
+       <p>Withdrawal of consent: If you have given us your informed consent, you have the right to withdraw your consent at any time. In this case, all data processing that we have carried out until your withdrawal remains lawful. </p>
 
+       <h4>Obligation to provide personal data</h4>
+       <p>You have no contractual or legal obligation to provide us with personal data. However, we might not be able to offer you our services without the data you provide.</p>
 
-       <h4>What information do we collect?</h4>
-       <p>Basic account information: If you register on this server, you may be asked to enter a username, an e-mail address and a password. You may also be able to enter additional profile information such as a display name and biography, and upload a profile picture and header image. The username, display name, biography, profile picture and header image are always listed publicly.</p>
-
-       <p>Contributions and other public information: When you submit a URL, a post or a comment to the <i>{{sitename}}</i> index, the date and time is stored as well as the application you submitted your contribution from. Your contributions are available publicly.</p> 
-
-       <p>IPs and other metadata: When you log in, we record the IP address you log in from, as well as the name of your browser application. The latest IP address used is stored for up to 12 months. We also may retain server logs which include the IP address of every request to our server.</p>
-
-
-
-       <h4>What do we use your information for?</h4>
-       <p>Any of the information we collect from you may be used in the following ways:</p>
-
-	<p>To provide the core functionality of PeARS. You can only submit new URLS or administer your posts and comments when you are logged in.</p>
-
-	<p>To aid moderation of the community, for example comparing your IP address with other known ones to determine ban evasion or other violations.</p>
-
-	<p>The email address you provide may be used to send you information about your account, and to respond to inquiries, and/or other requests or questions.</p>
+       <h4>The existence of automated decision-making (including profiling)</h4>
+       <p>We will not make you subject to any automated decision-making, including profiling in accordance with Art. 22 par. 1 and 4 GDPR, which has legal effects on you or affects you. </p>
 
 
 
-	<h4>How do we protect your information?</h4>
-	<p>We implement a variety of security measures to maintain the safety of your personal information when you enter, submit, or access your personal information. Among other things, your browser session, as well as the traffic between your applications and the API, are secured with SSL, and your password is hashed using a strong one-way algorithm.</p>
 
 
-
-	<h4>What is our data retention policy?</h4>
-	<p>We will make a good faith effort to:</p>
-
-	<p>Retain server logs containing the IP address of all requests to this server, in so far as such logs are kept, no more than 90 days.</p>
-
-	<p>Retain the IP addresses associated with registered users no more than 12 months.</p>
-
-	<p>You can request and download an archive of your content, including your contributions.</p>
-
-	<p>You may irreversibly delete your account at any time. Upon deletion, your username, email and password are removed from our server. Your content (submitted URLs, posts and comments) is moved to an anonymous account managed by the site's administrator (e.g. <i>deleteduser1234</i>). If you wish for your content to be entirely deleted, you can do so from your profile prior to account deletion. You can also contact us to request removal of your data.</p>
-
-
-
-	<h4>Do we use cookies?</h4>
-
-	<p>Yes. Cookies are small files that a site or its service provider transfers to your computer's hard drive through your Web browser (if you allow). These cookies enable the site to recognize your browser and, if you have a registered account, associate it with your registered account.</p>
-
-	<p>We only use session cookies. We use them to provide you with a way to log in and out of our site, manage your session as you navigate through the site, and recognize you upon future visits.</p>
-	
-
-	<h4>Do we disclose any information to outside parties?</h4>
-	<p>We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. This does not include trusted third parties who assist us in operating our site, conducting our business, or servicing you, so long as those parties agree to keep this information confidential. We may also release your information when we believe release is appropriate to comply with the law, enforce our site policies, or protect ours or others rights, property, or safety.</p>
-
-	<p>Your public contributions may be downloaded by other servers in the PeARS network, to improve search efficiency.</p>
-
-
-
-	<h4>Site usage by children</h4>
-	<p>If this server is in the EU or the EEA: Our site, products and services are all directed to people who are at least 16 years old. If you are under the age of 16, per the requirements of the GDPR (General Data Protection Regulation) do not use this site.</p>
-
-	<p>If this server is in the USA: Our site, products and services are all directed to people who are at least 13 years old. If you are under the age of 13, per the requirements of COPPA (Children's Online Privacy Protection Act) do not use this site.</p>
-
-	<p>Law requirements can be different if this server is in another jurisdiction.</p>
 
 	<hr>
 	<p>This document is CC-BY-SA. Originally adapted from the <a href="https://mastodon.social/privacy-policy">Mastodon privacy policy</a>.</p>
