--- a/app/templates/search/index.html
+++ b/app/templates/search/index.html
@@ -47,7 +47,7 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="col-lg-8 mt-5 mx-auto">
       <div class="alert alert-info alert-dismissible">
         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-        {{internal_message|safe}}
+        {{internal_message}}
       </div>
     </div>
   </div>
