--- a/app/templates/search/index.html
+++ b/app/templates/search/index.html
@@ -12,9 +12,9 @@ SPDX-License-Identifier: AGPL-3.0-only
     <div class="col-lg-8 text-center mt-5">
       {% if own_brand %}
 	{% if session.get('theme') == 'dark' %}
-          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='assets/logo-dark.png')}}"></a>
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{logo_path}}/logo-dark.png"></a>
 	{% else %}
-          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{ url_for('static', filename='assets/logo.png')}}"></a>
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{logo_path}}/logo.png"></a>
 	{% endif %}
       {% else %}
 	{% if session.get('theme') == 'dark' %}
