--- a/app/templates/search/index.html
+++ b/app/templates/search/index.html
@@ -10,11 +10,11 @@ SPDX-License-Identifier: AGPL-3.0-only
   <div class="row">
     <div class="col-lg-2"></div>
     <div class="col-lg-8 text-center mt-5">
-      {% if logo_path is not none %}
+      {% if own_brand %}
 	{% if session.get('theme') == 'dark' %}
-          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{logo_path}}/logo-dark.png"></a>
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{url_for('serve_logos', path='logo-dark.png')}}"></a>
 	{% else %}
-          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{logo_path}}/logo.png"></a>
+          <a href="{{ url_for('search.index')}}"><img width=350px; src="{{url_for('serve_logos', path='logo.png')}}"></a>
 	{% endif %}
       {% else %}
 	{% if session.get('theme') == 'dark' %}
