Added suggestion page (suggest url without indexing)

--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -15,6 +15,7 @@ SPDX-License-Identifier: AGPL-3.0-only
 		  <a href="{{url_for('urls.index_view')}}" class="btn btn-success btn-block">{{gettext('URLs')}}</a>
 		  <a href="{{url_for('pods.index_view')}}" class="btn btn-success btn-block">{{gettext('Pods')}}</a>
 		  <a href="{{url_for('user.index_view')}}" class="btn btn-success btn-block">{{gettext('Users')}}</a>
+		  <a href="{{url_for('suggestions.index_view')}}" class="btn btn-success btn-block">{{gettext('Suggestions')}}</a>
 		  <a href="{{url_for('personalization.index_view')}}" class="btn btn-success btn-block">{{gettext('Personalization')}}</a>
       </div>
     </div>
