--- a/app/templates/orchard/index.html
+++ b/app/templates/orchard/index.html
@@ -24,7 +24,9 @@ SPDX-License-Identifier: AGPL-3.0-only
 	          <p class="card-text">{{p[1]}} {{gettext("entries")}}.</p>
 		  <a href="{{url_for('orchard.get_a_pod')}}?pod={{p[0]}}" class="btn btn-success">{{gettext("View")}}</a>
 		  {% if p[0] != 'Tips' %}
+		  {% if current_user.is_authenticated and current_user.is_confirmed and current_user.is_admin %}
 	          <button class="btn btn-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapse{{p[2]}}" aria-expanded="false" aria-controls="collapse{{p[2]}}"><ion-icon name="pencil-outline"></ion-icon></button>
+		  {% endif %}
 		  {% endif %}
               </div>
             <div class="card card-body">
